--- a/directories/webinars/actuation--federation-and-interoperability-of-context-brokers.html
+++ b/directories/webinars/actuation--federation-and-interoperability-of-context-brokers.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;ebk14k5dNxo",
+  "contentUrl": "https://www.youtube.com/watch?v=ebk14k5dNxo",
   "embedUrl": "https://www.youtube.com/embed/ebk14k5dNxo",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
