--- a/directories/webinars/adopting-common-smart-data-models-for-smart-cities.html
+++ b/directories/webinars/adopting-common-smart-data-models-for-smart-cities.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;dfMo0HnaIUQ",
+  "contentUrl": "https://www.youtube.com/watch?v=dfMo0HnaIUQ",
   "embedUrl": "https://www.youtube.com/embed/dfMo0HnaIUQ",
   "duration": "T35M0S",
   "encodingFormat": "video/mpeg",
