--- a/directories/webinars/advanced-dashboards-with-wirecloud-2-0.html
+++ b/directories/webinars/advanced-dashboards-with-wirecloud-2-0.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;88uqeNDGoJI",
+  "contentUrl": "https://www.youtube.com/watch?v=88uqeNDGoJI",
   "embedUrl": "https://www.youtube.com/embed/88uqeNDGoJI",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
