--- a/directories/webinars/architecting-your-smart-solution-using-fiware.html
+++ b/directories/webinars/architecting-your-smart-solution-using-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;pTkZk4VF0gY",
+  "contentUrl": "https://www.youtube.com/watch?v=pTkZk4VF0gY",
   "embedUrl": "https://www.youtube.com/embed/pTkZk4VF0gY",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
