--- a/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
+++ b/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;n6XN89VSZNg",
+  "contentUrl": "https://www.youtube.com/watch?v=n6XN89VSZNg",
   "embedUrl": "https://www.youtube.com/embed/n6XN89VSZNg",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
