--- a/directories/webinars/blockchain-dlt-integration-with-fiware.html
+++ b/directories/webinars/blockchain-dlt-integration-with-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;ITSxtlCmNhQ",
+  "contentUrl": "https://www.youtube.com/watch?v=ITSxtlCmNhQ",
   "embedUrl": "https://www.youtube.com/embed/ITSxtlCmNhQ",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
