--- a/directories/webinars/building-real-time-inference-ai-services-with-fiware.html
+++ b/directories/webinars/building-real-time-inference-ai-services-with-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;L_IDCUE1IbA",
+  "contentUrl": "https://www.youtube.com/watch?v=L_IDCUE1IbA",
   "embedUrl": "https://www.youtube.com/embed/L_IDCUE1IbA",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
