--- a/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
+++ b/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;b0EWq5E5jAc",
+  "contentUrl": "https://www.youtube.com/watch?v=b0EWq5E5jAc",
   "embedUrl": "https://www.youtube.com/embed/b0EWq5E5jAc",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
