--- a/directories/webinars/cloud-edge-processing-with-fogflow.html
+++ b/directories/webinars/cloud-edge-processing-with-fogflow.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;D06W3t5uv94",
+  "contentUrl": "https://www.youtube.com/watch?v=D06W3t5uv94",
   "embedUrl": "https://www.youtube.com/embed/D06W3t5uv94",
   "duration": "T70M0S",
   "encodingFormat": "video/mpeg",
