--- a/directories/webinars/connecting-ngsi-ld-fiware-components.html
+++ b/directories/webinars/connecting-ngsi-ld-fiware-components.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;sWa0k5GyGyw",
+  "contentUrl": "https://www.youtube.com/watch?v=sWa0k5GyGyw",
   "embedUrl": "https://www.youtube.com/embed/sWa0k5GyGyw",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
