--- a/directories/webinars/contract-negotiation-in-data-spaces.html
+++ b/directories/webinars/contract-negotiation-in-data-spaces.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;kkvNQfkVJkg",
+  "contentUrl": "https://www.youtube.com/watch?v=kkvNQfkVJkg",
   "embedUrl": "https://www.youtube.com/embed/kkvNQfkVJkg",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
