--- a/directories/webinars/core-context-management.html
+++ b/directories/webinars/core-context-management.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;pK4GgYjlmdY",
+  "contentUrl": "https://www.youtube.com/watch?v=pK4GgYjlmdY",
   "embedUrl": "https://www.youtube.com/embed/pK4GgYjlmdY",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
