--- a/directories/webinars/creating-advanced-dashboards-using-wirecloud.html
+++ b/directories/webinars/creating-advanced-dashboards-using-wirecloud.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;LkGpx6BKbRM",
+  "contentUrl": "https://www.youtube.com/watch?v=LkGpx6BKbRM",
   "embedUrl": "https://www.youtube.com/embed/LkGpx6BKbRM",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
