--- a/directories/webinars/creating-combined-ngsi-v2-ngsi-ld-data-spaces.html
+++ b/directories/webinars/creating-combined-ngsi-v2-ngsi-ld-data-spaces.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;PjuYn8Lj-Xc",
+  "contentUrl": "https://www.youtube.com/watch?v=PjuYn8Lj-Xc",
   "embedUrl": "https://www.youtube.com/embed/PjuYn8Lj-Xc",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
