--- a/directories/webinars/customizing-iot-agents.html
+++ b/directories/webinars/customizing-iot-agents.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;HuEwI8wJKFU",
+  "contentUrl": "https://www.youtube.com/watch?v=HuEwI8wJKFU",
   "embedUrl": "https://www.youtube.com/embed/HuEwI8wJKFU",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
