--- a/directories/webinars/decentralized-iam-based-on-verifiable-credentials-and-odrl.html
+++ b/directories/webinars/decentralized-iam-based-on-verifiable-credentials-and-odrl.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;zz7MHd3imzs",
+  "contentUrl": "https://www.youtube.com/watch?v=zz7MHd3imzs",
   "embedUrl": "https://www.youtube.com/embed/zz7MHd3imzs",
   "duration": "T80M0S",
   "encodingFormat": "video/mpeg",
