--- a/directories/webinars/deploying-a-fiware-data-space-connector.html
+++ b/directories/webinars/deploying-a-fiware-data-space-connector.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;5qrhUCczk8w",
+  "contentUrl": "https://www.youtube.com/watch?v=5qrhUCczk8w",
   "embedUrl": "https://www.youtube.com/embed/5qrhUCczk8w",
   "duration": "T90M0S",
   "encodingFormat": "video/mpeg",
