--- a/directories/webinars/end-to-end-ai-solution-with-pyspark---draco.html
+++ b/directories/webinars/end-to-end-ai-solution-with-pyspark---draco.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;d724j7PpaVg",
+  "contentUrl": "https://www.youtube.com/watch?v=d724j7PpaVg",
   "embedUrl": "https://www.youtube.com/embed/d724j7PpaVg",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
