--- a/directories/webinars/enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models.html
+++ b/directories/webinars/enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;SHUnETH4wDo",
+  "contentUrl": "https://www.youtube.com/watch?v=SHUnETH4wDo",
   "embedUrl": "https://www.youtube.com/embed/SHUnETH4wDo",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
