--- a/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
+++ b/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;IIN5d2Mco9A",
+  "contentUrl": "https://www.youtube.com/watch?v=IIN5d2Mco9A",
   "embedUrl": "https://www.youtube.com/embed/IIN5d2Mco9A",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
