--- a/directories/webinars/fiware-and-micro-ros--enabling-robotics-systems-on-micro-controllers.html
+++ b/directories/webinars/fiware-and-micro-ros--enabling-robotics-systems-on-micro-controllers.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;XJL2_FHcils",
+  "contentUrl": "https://www.youtube.com/watch?v=XJL2_FHcils",
   "embedUrl": "https://www.youtube.com/embed/XJL2_FHcils",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
