--- a/directories/webinars/fiware-basics--understanding-the-terminology.html
+++ b/directories/webinars/fiware-basics--understanding-the-terminology.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;laDTBcLziB8",
+  "contentUrl": "https://www.youtube.com/watch?v=laDTBcLziB8",
   "embedUrl": "https://www.youtube.com/embed/laDTBcLziB8",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
