--- a/directories/webinars/fiware-building-the-future.html
+++ b/directories/webinars/fiware-building-the-future.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;REoJA7yxJ_0",
+  "contentUrl": "https://www.youtube.com/watch?v=REoJA7yxJ_0",
   "embedUrl": "https://www.youtube.com/embed/REoJA7yxJ_0",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
