--- a/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
+++ b/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;hm5qMlhpK0g",
+  "contentUrl": "https://www.youtube.com/watch?v=hm5qMlhpK0g",
   "embedUrl": "https://www.youtube.com/embed/hm5qMlhpK0g",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
