--- a/directories/webinars/fiware-ihubs-webinar---spain--andalusia---italy--perugia---argentina--la-plata-.html
+++ b/directories/webinars/fiware-ihubs-webinar---spain--andalusia---italy--perugia---argentina--la-plata-.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;IXjQwcuf9Xw",
+  "contentUrl": "https://www.youtube.com/watch?v=IXjQwcuf9Xw",
   "embedUrl": "https://www.youtube.com/embed/IXjQwcuf9Xw",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
