--- a/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
+++ b/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;GmloMFyDa7Y",
+  "contentUrl": "https://www.youtube.com/watch?v=GmloMFyDa7Y",
   "embedUrl": "https://www.youtube.com/embed/GmloMFyDa7Y",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
