--- a/directories/webinars/fiware-ihubs-webinar---the-netherlands--canary-islands--azores.html
+++ b/directories/webinars/fiware-ihubs-webinar---the-netherlands--canary-islands--azores.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;a1RV2UILgyg",
+  "contentUrl": "https://www.youtube.com/watch?v=a1RV2UILgyg",
   "embedUrl": "https://www.youtube.com/embed/a1RV2UILgyg",
   "duration": "T60M0S",
   "encodingFormat": "video/mpeg",
