--- a/directories/webinars/fiware-vision-and-value-proposition-for-a-smart-future.html
+++ b/directories/webinars/fiware-vision-and-value-proposition-for-a-smart-future.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;7ZMUYEWD1gw",
+  "contentUrl": "https://www.youtube.com/watch?v=7ZMUYEWD1gw",
   "embedUrl": "https://www.youtube.com/embed/7ZMUYEWD1gw",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
