--- a/directories/webinars/fiware-vision-on-data-spaces.html
+++ b/directories/webinars/fiware-vision-on-data-spaces.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;phCPgxzT8t0",
+  "contentUrl": "https://www.youtube.com/watch?v=phCPgxzT8t0",
   "embedUrl": "https://www.youtube.com/embed/phCPgxzT8t0",
   "duration": "T90M0S",
   "encodingFormat": "video/mpeg",
