--- a/directories/webinars/how-to-get-context-data-out-of-robots.html
+++ b/directories/webinars/how-to-get-context-data-out-of-robots.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;T8XV6Wah9l4",
+  "contentUrl": "https://www.youtube.com/watch?v=T8XV6Wah9l4",
   "embedUrl": "https://www.youtube.com/embed/T8XV6Wah9l4",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
