--- a/directories/webinars/india-urban-data-exchange.html
+++ b/directories/webinars/india-urban-data-exchange.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;YXp822s2_n4",
+  "contentUrl": "https://www.youtube.com/watch?v=YXp822s2_n4",
   "embedUrl": "https://www.youtube.com/embed/YXp822s2_n4",
   "duration": "T25M0S",
   "encodingFormat": "video/mpeg",
