--- a/directories/webinars/integrating-robotic-systems-for-agile-manufacturing-using-fiware.html
+++ b/directories/webinars/integrating-robotic-systems-for-agile-manufacturing-using-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;ftxNOdwqjiQ",
+  "contentUrl": "https://www.youtube.com/watch?v=ftxNOdwqjiQ",
   "embedUrl": "https://www.youtube.com/embed/ftxNOdwqjiQ",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
