--- a/directories/webinars/introduction-to-fiware.html
+++ b/directories/webinars/introduction-to-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://youtu.be/97JsnnpPLrA&#x27;",
+  "contentUrl": "https://youtu.be/97JsnnpPLrA'",
   "embedUrl": "https://youtu.be/97JsnnpPLrA&#x27;",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
