--- a/directories/webinars/introduction-to-ngsi-ld.html
+++ b/directories/webinars/introduction-to-ngsi-ld.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;rZ13IyLpAtA",
+  "contentUrl": "https://www.youtube.com/watch?v=rZ13IyLpAtA",
   "embedUrl": "https://www.youtube.com/embed/rZ13IyLpAtA",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
