--- a/directories/webinars/language-maps-and-multilanguage-support-in-ngsi-ld.html
+++ b/directories/webinars/language-maps-and-multilanguage-support-in-ngsi-ld.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;QZIrSa7un24",
+  "contentUrl": "https://www.youtube.com/watch?v=QZIrSa7un24",
   "embedUrl": "https://www.youtube.com/embed/QZIrSa7un24",
   "duration": "T35M0S",
   "encodingFormat": "video/mpeg",
