--- a/directories/webinars/local-expert-in-b2b-data-sharing.html
+++ b/directories/webinars/local-expert-in-b2b-data-sharing.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;J38N832HRjM",
+  "contentUrl": "https://www.youtube.com/watch?v=J38N832HRjM",
   "embedUrl": "https://www.youtube.com/embed/J38N832HRjM",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
