--- a/directories/webinars/machine-learning-with-cosmos-and-spark.html
+++ b/directories/webinars/machine-learning-with-cosmos-and-spark.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;isugbtZWU4I",
+  "contentUrl": "https://www.youtube.com/watch?v=isugbtZWU4I",
   "embedUrl": "https://www.youtube.com/embed/isugbtZWU4I",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
