--- a/directories/webinars/machine-learning-with-fiware-and-mlops.html
+++ b/directories/webinars/machine-learning-with-fiware-and-mlops.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;6X9r5Kb8UIs",
+  "contentUrl": "https://www.youtube.com/watch?v=6X9r5Kb8UIs",
   "embedUrl": "https://www.youtube.com/embed/6X9r5Kb8UIs",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
