--- a/directories/webinars/managing-data-models-and-exposing-digital-twins.html
+++ b/directories/webinars/managing-data-models-and-exposing-digital-twins.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;42dNh1VM7n4",
+  "contentUrl": "https://www.youtube.com/watch?v=42dNh1VM7n4",
   "embedUrl": "https://www.youtube.com/embed/42dNh1VM7n4",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
