--- a/directories/webinars/managing-users-identities-and-access-control-policies-with-api-umbrella.html
+++ b/directories/webinars/managing-users-identities-and-access-control-policies-with-api-umbrella.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;BuyhK1rzHIY",
+  "contentUrl": "https://www.youtube.com/watch?v=BuyhK1rzHIY",
   "embedUrl": "https://www.youtube.com/embed/BuyhK1rzHIY",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
