--- a/directories/webinars/monetizing-your-organization-s-data.html
+++ b/directories/webinars/monetizing-your-organization-s-data.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;jsG7SYtP4FU",
+  "contentUrl": "https://www.youtube.com/watch?v=jsG7SYtP4FU",
   "embedUrl": "https://www.youtube.com/embed/jsG7SYtP4FU",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
