--- a/directories/webinars/monitoring-and-supervision-of-robotic-systems-using-fiware-and-ros-2.html
+++ b/directories/webinars/monitoring-and-supervision-of-robotic-systems-using-fiware-and-ros-2.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;gED5mAtBtYg",
+  "contentUrl": "https://www.youtube.com/watch?v=gED5mAtBtYg",
   "embedUrl": "https://www.youtube.com/embed/gED5mAtBtYg",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
