--- a/directories/webinars/monitoring-measures-using-fiware---grafana.html
+++ b/directories/webinars/monitoring-measures-using-fiware---grafana.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;Gaa23hC0teo",
+  "contentUrl": "https://www.youtube.com/watch?v=Gaa23hC0teo",
   "embedUrl": "https://www.youtube.com/embed/Gaa23hC0teo",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
