--- a/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
+++ b/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;MBx23ypORLk",
+  "contentUrl": "https://www.youtube.com/watch?v=MBx23ypORLk",
   "embedUrl": "https://www.youtube.com/embed/MBx23ypORLk",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
