--- a/directories/webinars/ngsi-ld-iot-agents.html
+++ b/directories/webinars/ngsi-ld-iot-agents.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;XBLyMa-UBmg",
+  "contentUrl": "https://www.youtube.com/watch?v=XBLyMa-UBmg",
   "embedUrl": "https://www.youtube.com/embed/XBLyMa-UBmg",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
