--- a/directories/webinars/ngsi-ld-temporal-operations.html
+++ b/directories/webinars/ngsi-ld-temporal-operations.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;w6ymNPO-Baw",
+  "contentUrl": "https://www.youtube.com/watch?v=w6ymNPO-Baw",
   "embedUrl": "https://www.youtube.com/embed/w6ymNPO-Baw",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
