--- a/directories/webinars/passing-the-fiware-experts-exam.html
+++ b/directories/webinars/passing-the-fiware-experts-exam.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;6_JLn-69Z_8",
+  "contentUrl": "https://www.youtube.com/watch?v=6_JLn-69Z_8",
   "embedUrl": "https://www.youtube.com/embed/6_JLn-69Z_8",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
