--- a/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
+++ b/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;a0NxSS96YzY",
+  "contentUrl": "https://www.youtube.com/watch?v=a0NxSS96YzY",
   "embedUrl": "https://www.youtube.com/embed/a0NxSS96YzY",
   "duration": "T30M0S",
   "encodingFormat": "video/mpeg",
