--- a/directories/webinars/scalable-deployments-with-fiware.html
+++ b/directories/webinars/scalable-deployments-with-fiware.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;WUman6Mnx58",
+  "contentUrl": "https://www.youtube.com/watch?v=WUman6Mnx58",
   "embedUrl": "https://www.youtube.com/embed/WUman6Mnx58",
   "duration": "T35M0S",
   "encodingFormat": "video/mpeg",
