--- a/directories/webinars/securing-fiware-iot-devices.html
+++ b/directories/webinars/securing-fiware-iot-devices.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;_87IZhrYo3U",
+  "contentUrl": "https://www.youtube.com/watch?v=_87IZhrYo3U",
   "embedUrl": "https://www.youtube.com/embed/_87IZhrYo3U",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
