--- a/directories/webinars/short-term-history-within-fiware-systems.html
+++ b/directories/webinars/short-term-history-within-fiware-systems.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;fX_YAc7G4Dk",
+  "contentUrl": "https://www.youtube.com/watch?v=fX_YAc7G4Dk",
   "embedUrl": "https://www.youtube.com/embed/fX_YAc7G4Dk",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
