--- a/directories/webinars/smart-water-management---using-fiware-smart-data-models-for-water.html
+++ b/directories/webinars/smart-water-management---using-fiware-smart-data-models-for-water.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;QbAiLMFEQrY",
+  "contentUrl": "https://www.youtube.com/watch?v=QbAiLMFEQrY",
   "embedUrl": "https://www.youtube.com/embed/QbAiLMFEQrY",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
