--- a/directories/webinars/strategies-for-context-data-persistence.html
+++ b/directories/webinars/strategies-for-context-data-persistence.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;_uLZDGFPlRA",
+  "contentUrl": "https://www.youtube.com/watch?v=_uLZDGFPlRA",
   "embedUrl": "https://www.youtube.com/embed/_uLZDGFPlRA",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
