--- a/directories/webinars/the-use-of-dds-middleware-in-robotics.html
+++ b/directories/webinars/the-use-of-dds-middleware-in-robotics.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;OQYBJJ5ydto",
+  "contentUrl": "https://www.youtube.com/watch?v=OQYBJJ5ydto",
   "embedUrl": "https://www.youtube.com/embed/OQYBJJ5ydto",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
