--- a/directories/webinars/turning-organizations-into-smart-organizations.html
+++ b/directories/webinars/turning-organizations-into-smart-organizations.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;XsoXchKiKB4",
+  "contentUrl": "https://www.youtube.com/watch?v=XsoXchKiKB4",
   "embedUrl": "https://www.youtube.com/embed/XsoXchKiKB4",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
