--- a/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
+++ b/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;sTcxSaL3dIQ",
+  "contentUrl": "https://www.youtube.com/watch?v=sTcxSaL3dIQ",
   "embedUrl": "https://www.youtube.com/embed/sTcxSaL3dIQ",
   "duration": "T35M0S",
   "encodingFormat": "video/mpeg",
