--- a/directories/webinars/what-is-an-iot-agent-.html
+++ b/directories/webinars/what-is-an-iot-agent-.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;my6Kgiqx-OM",
+  "contentUrl": "https://www.youtube.com/watch?v=my6Kgiqx-OM",
   "embedUrl": "https://www.youtube.com/embed/my6Kgiqx-OM",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
