--- a/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
+++ b/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;1X_kNwkkcjo",
+  "contentUrl": "https://www.youtube.com/watch?v=1X_kNwkkcjo",
   "embedUrl": "https://www.youtube.com/embed/1X_kNwkkcjo",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
