--- a/directories/webinars/data-modelling-with-ngsi.html
+++ b/directories/webinars/data-modelling-with-ngsi.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;T_1DpKf6C_c",
+  "contentUrl": "https://www.youtube.com/watch?v=T_1DpKf6C_c",
   "embedUrl": "https://www.youtube.com/embed/T_1DpKf6C_c",
   "duration": "T35M0S",
   "encodingFormat": "video/mpeg",
