--- a/directories/webinars/fiware-data-space-technologies---ongoing-and-future-work.html
+++ b/directories/webinars/fiware-data-space-technologies---ongoing-and-future-work.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;bZAzOHIdSr8",
+  "contentUrl": "https://www.youtube.com/watch?v=bZAzOHIdSr8",
   "embedUrl": "https://www.youtube.com/embed/bZAzOHIdSr8",
   "duration": "T90M0S",
   "encodingFormat": "video/mpeg",
