--- a/directories/webinars/fiware-data-space-technologies---reference-use-case.html
+++ b/directories/webinars/fiware-data-space-technologies---reference-use-case.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;3fLisTubkF0",
+  "contentUrl": "https://www.youtube.com/watch?v=3fLisTubkF0",
   "embedUrl": "https://www.youtube.com/embed/3fLisTubkF0",
   "duration": "T90M0S",
   "encodingFormat": "video/mpeg",
