--- a/directories/webinars/how-to-debug-iot-agents.html
+++ b/directories/webinars/how-to-debug-iot-agents.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;FRqJsywi9e8",
+  "contentUrl": "https://www.youtube.com/watch?v=FRqJsywi9e8",
   "embedUrl": "https://www.youtube.com/embed/FRqJsywi9e8",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
