--- a/directories/webinars/how-to-develop-fiware-ngsi-interfaces-for-robots.html
+++ b/directories/webinars/how-to-develop-fiware-ngsi-interfaces-for-robots.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;m5JWxlMMuqk",
+  "contentUrl": "https://www.youtube.com/watch?v=m5JWxlMMuqk",
   "embedUrl": "https://www.youtube.com/embed/m5JWxlMMuqk",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
