--- a/directories/webinars/how-to-secure-fiware-architectures.html
+++ b/directories/webinars/how-to-secure-fiware-architectures.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;SP0zFdTybA4",
+  "contentUrl": "https://www.youtube.com/watch?v=SP0zFdTybA4",
   "embedUrl": "https://www.youtube.com/embed/SP0zFdTybA4",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
