--- a/directories/webinars/iot-agent-gateways-using-the-iota-tangle-for-secure-data-transfer.html
+++ b/directories/webinars/iot-agent-gateways-using-the-iota-tangle-for-secure-data-transfer.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;qDMljIidA6k",
+  "contentUrl": "https://www.youtube.com/watch?v=qDMljIidA6k",
   "embedUrl": "https://www.youtube.com/embed/qDMljIidA6k",
   "duration": "T45M0S",
   "encodingFormat": "video/mpeg",
