--- a/directories/webinars/leveraging-ngsi-in-university-courses.html
+++ b/directories/webinars/leveraging-ngsi-in-university-courses.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;057C4mBKSdU",
+  "contentUrl": "https://www.youtube.com/watch?v=057C4mBKSdU",
   "embedUrl": "https://www.youtube.com/embed/057C4mBKSdU",
   "duration": "T50M0S",
   "encodingFormat": "video/mpeg",
