--- a/directories/webinars/india-urban-data-exchange.html
+++ b/directories/webinars/india-urban-data-exchange.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/YXp822s2_n4"> 
+        src="https://www.youtube.com/embed/YXp822s2_n4"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
