--- a/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
+++ b/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/n6XN89VSZNg"> 
+        src="https://www.youtube.com/embed/n6XN89VSZNg"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
