--- a/directories/webinars/data-modelling-with-ngsi.html
+++ b/directories/webinars/data-modelling-with-ngsi.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/T_1DpKf6C_c"> 
+        src="https://www.youtube.com/embed/T_1DpKf6C_c"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
