--- a/directories/webinars/deploying-a-fiware-data-space-connector.html
+++ b/directories/webinars/deploying-a-fiware-data-space-connector.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/5qrhUCczk8w"> 
+        src="https://www.youtube.com/embed/5qrhUCczk8w"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
