--- a/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
+++ b/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/IIN5d2Mco9A"> 
+        src="https://www.youtube.com/embed/IIN5d2Mco9A"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
