--- a/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
+++ b/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/hm5qMlhpK0g"> 
+        src="https://www.youtube.com/embed/hm5qMlhpK0g"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
