--- a/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
+++ b/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/GmloMFyDa7Y"> 
+        src="https://www.youtube.com/embed/GmloMFyDa7Y"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
