--- a/directories/webinars/fiware-ihubs-webinar---the-netherlands--canary-islands--azores.html
+++ b/directories/webinars/fiware-ihubs-webinar---the-netherlands--canary-islands--azores.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/a1RV2UILgyg"> 
+        src="https://www.youtube.com/embed/a1RV2UILgyg"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
