--- a/directories/webinars/fiware-vision-and-value-proposition-for-a-smart-future.html
+++ b/directories/webinars/fiware-vision-and-value-proposition-for-a-smart-future.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/7ZMUYEWD1gw"> 
+        src="https://www.youtube.com/embed/7ZMUYEWD1gw"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
