--- a/directories/webinars/fiware-vision-on-data-spaces.html
+++ b/directories/webinars/fiware-vision-on-data-spaces.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/phCPgxzT8t0"> 
+        src="https://www.youtube.com/embed/phCPgxzT8t0"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
