--- a/directories/webinars/introduction-to-fiware.html
+++ b/directories/webinars/introduction-to-fiware.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://youtu.be/97JsnnpPLrA&#x27;"> 
+        src="https://youtu.be/97JsnnpPLrA&#x27;"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
