--- a/directories/webinars/local-expert-in-b2b-data-sharing.html
+++ b/directories/webinars/local-expert-in-b2b-data-sharing.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/J38N832HRjM"> 
+        src="https://www.youtube.com/embed/J38N832HRjM"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
