--- a/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
+++ b/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/a0NxSS96YzY"> 
+        src="https://www.youtube.com/embed/a0NxSS96YzY"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
