--- a/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
+++ b/directories/webinars/big-data-analysis-using-cosmos-with-spark-or-flink.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Big Data Analysis using Cosmos with Spark or Flink - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Big Data Analysis using Cosmos with Spark or Flink</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
