--- a/directories/webinars/building-real-time-inference-ai-services-with-fiware.html
+++ b/directories/webinars/building-real-time-inference-ai-services-with-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Building real-time inference AI services with FIWARE - Developers (Processing)</h1>
+	<h1 class="heading">FIWARE Webinars: Building real-time inference AI services with FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
