--- a/directories/webinars/decentralized-iam-based-on-verifiable-credentials-and-odrl.html
+++ b/directories/webinars/decentralized-iam-based-on-verifiable-credentials-and-odrl.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Decentralized IAM based on Verifiable Credentials and ODRL - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Decentralized IAM based on Verifiable Credentials and ODRL</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
