--- a/directories/webinars/end-to-end-ai-solution-with-pyspark---draco.html
+++ b/directories/webinars/end-to-end-ai-solution-with-pyspark---draco.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: End-to-end AI Solution With PySpark &amp; Draco - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: End-to-end AI Solution With PySpark &amp; Draco</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
