--- a/directories/webinars/fiware-basics--understanding-the-terminology.html
+++ b/directories/webinars/fiware-basics--understanding-the-terminology.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE Basics, understanding the terminology - Developers,Business,Community,iHubs (Fundamentals)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE Basics, understanding the terminology</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
