--- a/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
+++ b/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE Data Spaces – A Practical Introduction Into Roles and Components - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE Data Spaces – A Practical Introduction Into Roles and Components</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
