--- a/directories/webinars/how-to-get-context-data-out-of-robots.html
+++ b/directories/webinars/how-to-get-context-data-out-of-robots.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: How to Get Context Data Out of Robots - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: How to Get Context Data Out of Robots</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
