--- a/directories/webinars/india-urban-data-exchange.html
+++ b/directories/webinars/india-urban-data-exchange.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: India Urban Data Exchange - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: India Urban Data Exchange</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
