--- a/directories/webinars/machine-learning-with-fiware-and-mlops.html
+++ b/directories/webinars/machine-learning-with-fiware-and-mlops.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Machine learning with FIWARE and MLOps - Developers (Operations)</h1>
+	<h1 class="heading">FIWARE Webinars: Machine learning with FIWARE and MLOps</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
