--- a/directories/webinars/managing-data-models-and-exposing-digital-twins.html
+++ b/directories/webinars/managing-data-models-and-exposing-digital-twins.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Managing Data Models and Exposing Digital Twins - Developers,iHubs,Business (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Managing Data Models and Exposing Digital Twins</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
