--- a/directories/webinars/actuation--federation-and-interoperability-of-context-brokers.html
+++ b/directories/webinars/actuation--federation-and-interoperability-of-context-brokers.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Actuation, Federation and interoperability of context brokers - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Actuation, Federation and interoperability of context brokers</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
