--- a/directories/webinars/adopting-common-smart-data-models-for-smart-cities.html
+++ b/directories/webinars/adopting-common-smart-data-models-for-smart-cities.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Adopting Common Smart Data Models for Smart Cities - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Adopting Common Smart Data Models for Smart Cities</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
