--- a/directories/webinars/advanced-dashboards-with-wirecloud-2-0.html
+++ b/directories/webinars/advanced-dashboards-with-wirecloud-2-0.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Advanced Dashboards with WireCloud 2.0 - Developers (Visualisation)</h1>
+	<h1 class="heading">FIWARE Webinars: Advanced Dashboards with WireCloud 2.0</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
