--- a/directories/webinars/architecting-your-smart-solution-using-fiware.html
+++ b/directories/webinars/architecting-your-smart-solution-using-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Architecting Your Smart Solution Using FIWARE - Developers,Business (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Architecting Your Smart Solution Using FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
