--- a/directories/webinars/blockchain-dlt-integration-with-fiware.html
+++ b/directories/webinars/blockchain-dlt-integration-with-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Blockchain/DLT Integration with FIWARE - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Blockchain/DLT Integration with FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
