--- a/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
+++ b/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Choosing Open Source Licenses for FIWARE Components - Community,Business (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Choosing Open Source Licenses for FIWARE Components</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
