--- a/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
+++ b/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Cities as Enablers of the Data Economy - Smart Data Models for Cities - Developers (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Cities as Enablers of the Data Economy - Smart Data Models for Cities</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
