--- a/directories/webinars/cloud-edge-processing-with-fogflow.html
+++ b/directories/webinars/cloud-edge-processing-with-fogflow.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Cloud-Edge processing with FogFlow - Developers (Processing)</h1>
+	<h1 class="heading">FIWARE Webinars: Cloud-Edge processing with FogFlow</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
