--- a/directories/webinars/contract-negotiation-in-data-spaces.html
+++ b/directories/webinars/contract-negotiation-in-data-spaces.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Contract Negotiation in Data Spaces - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Contract Negotiation in Data Spaces</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
