--- a/directories/webinars/creating-advanced-dashboards-using-wirecloud.html
+++ b/directories/webinars/creating-advanced-dashboards-using-wirecloud.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Creating Advanced Dashboards Using Wirecloud - Developers (Visualisation)</h1>
+	<h1 class="heading">FIWARE Webinars: Creating Advanced Dashboards Using Wirecloud</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
