--- a/directories/webinars/creating-combined-ngsi-v2-ngsi-ld-data-spaces.html
+++ b/directories/webinars/creating-combined-ngsi-v2-ngsi-ld-data-spaces.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Creating Combined NGSI-v2/NGSI-LD Data Spaces - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Creating Combined NGSI-v2/NGSI-LD Data Spaces</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
