--- a/directories/webinars/customizing-iot-agents.html
+++ b/directories/webinars/customizing-iot-agents.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Customizing IoT Agents - Developers (IoT Agents)</h1>
+	<h1 class="heading">FIWARE Webinars: Customizing IoT Agents</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
