--- a/directories/webinars/data-modelling-with-ngsi.html
+++ b/directories/webinars/data-modelling-with-ngsi.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Data Modelling with NGSI - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Data Modelling with NGSI</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
