--- a/directories/webinars/deploying-a-fiware-data-space-connector.html
+++ b/directories/webinars/deploying-a-fiware-data-space-connector.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Deploying a FIWARE Data Space Connector - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Deploying a FIWARE Data Space Connector</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
