--- a/directories/webinars/enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models.html
+++ b/directories/webinars/enhancing-tourism-with-smart-technologies--integrating-fiware-and-large-language-models.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Enhancing Tourism with Smart Technologies: Integrating FIWARE and Large Language Models - Developers (Processing)</h1>
+	<h1 class="heading">FIWARE Webinars: Enhancing Tourism with Smart Technologies: Integrating FIWARE and Large Language Models</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
