--- a/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
+++ b/directories/webinars/extending-fiware-mlops-using-argo-workflows.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Extending FIWARE MLOps using Argo Workflows - Developers (Operations)</h1>
+	<h1 class="heading">FIWARE Webinars: Extending FIWARE MLOps using Argo Workflows</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
