--- a/directories/webinars/fiware-building-the-future.html
+++ b/directories/webinars/fiware-building-the-future.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE Building the Future - Developers,Business (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE Building the Future</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
