--- a/directories/webinars/fiware-data-space-technologies---ongoing-and-future-work.html
+++ b/directories/webinars/fiware-data-space-technologies---ongoing-and-future-work.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE Data Space Technologies - Ongoing and Future Work - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE Data Space Technologies - Ongoing and Future Work</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
