--- a/directories/webinars/fiware-ihubs-webinar---spain--andalusia---italy--perugia---argentina--la-plata-.html
+++ b/directories/webinars/fiware-ihubs-webinar---spain--andalusia---italy--perugia---argentina--la-plata-.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE iHubs Webinar - Spain (Andalusia), Italy (Perugia), Argentina (La Plata) - iHubs (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE iHubs Webinar - Spain (Andalusia), Italy (Perugia), Argentina (La Plata)</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
