--- a/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
+++ b/directories/webinars/fiware-ihubs-webinar---spain--badajoz---france--saint-quentin---uruguay--montevideo-.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE iHubs Webinar - Spain (Badajoz), France (Saint-Quentin), Uruguay (Montevideo) - iHubs (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE iHubs Webinar - Spain (Badajoz), France (Saint-Quentin), Uruguay (Montevideo)</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
