--- a/directories/webinars/fiware-vision-on-data-spaces.html
+++ b/directories/webinars/fiware-vision-on-data-spaces.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: FIWARE Vision on Data Spaces - Developers,Business (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: FIWARE Vision on Data Spaces</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
