--- a/directories/webinars/how-to-develop-fiware-ngsi-interfaces-for-robots.html
+++ b/directories/webinars/how-to-develop-fiware-ngsi-interfaces-for-robots.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: How to Develop FIWARE NGSI Interfaces for Robots - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: How to Develop FIWARE NGSI Interfaces for Robots</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
