--- a/directories/webinars/how-to-secure-fiware-architectures.html
+++ b/directories/webinars/how-to-secure-fiware-architectures.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: How to Secure FIWARE Architectures - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: How to Secure FIWARE Architectures</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
