--- a/directories/webinars/integrating-robotic-systems-for-agile-manufacturing-using-fiware.html
+++ b/directories/webinars/integrating-robotic-systems-for-agile-manufacturing-using-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Integrating Robotic Systems for Agile Manufacturing Using FIWARE - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: Integrating Robotic Systems for Agile Manufacturing Using FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
