--- a/directories/webinars/introduction-to-fiware.html
+++ b/directories/webinars/introduction-to-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Introduction to FIWARE - Developers,Business,Community,iHubs (Fundamentals)</h1>
+	<h1 class="heading">FIWARE Webinars: Introduction to FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
