--- a/directories/webinars/introduction-to-ngsi-ld.html
+++ b/directories/webinars/introduction-to-ngsi-ld.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Introduction to NGSI-LD - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Introduction to NGSI-LD</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
