--- a/directories/webinars/iot-agent-gateways-using-the-iota-tangle-for-secure-data-transfer.html
+++ b/directories/webinars/iot-agent-gateways-using-the-iota-tangle-for-secure-data-transfer.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: IoT Agent Gateways Using the IOTA Tangle for Secure Data Transfer - Developers (IoT Agents)</h1>
+	<h1 class="heading">FIWARE Webinars: IoT Agent Gateways Using the IOTA Tangle for Secure Data Transfer</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
