--- a/directories/webinars/leveraging-ngsi-in-university-courses.html
+++ b/directories/webinars/leveraging-ngsi-in-university-courses.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Leveraging NGSI in University Courses - Developers,iHubs (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Leveraging NGSI in University Courses</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
