--- a/directories/webinars/local-expert-in-b2b-data-sharing.html
+++ b/directories/webinars/local-expert-in-b2b-data-sharing.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Local Expert in B2B Data Sharing - iHubs,Community,Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Local Expert in B2B Data Sharing</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
