--- a/directories/webinars/machine-learning-with-cosmos-and-spark.html
+++ b/directories/webinars/machine-learning-with-cosmos-and-spark.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Machine Learning with Cosmos and Spark - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Machine Learning with Cosmos and Spark</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
