--- a/directories/webinars/managing-users-identities-and-access-control-policies-with-api-umbrella.html
+++ b/directories/webinars/managing-users-identities-and-access-control-policies-with-api-umbrella.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Managing Users Identities and Access Control Policies with API Umbrella - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Managing Users Identities and Access Control Policies with API Umbrella</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
