--- a/directories/webinars/monetizing-your-organization-s-data.html
+++ b/directories/webinars/monetizing-your-organization-s-data.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Monetizing your Organization&#x27;s Data - Developers (Data Monetization)</h1>
+	<h1 class="heading">FIWARE Webinars: Monetizing your Organization&#x27;s Data</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
