--- a/directories/webinars/monitoring-and-supervision-of-robotic-systems-using-fiware-and-ros-2.html
+++ b/directories/webinars/monitoring-and-supervision-of-robotic-systems-using-fiware-and-ros-2.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Monitoring and Supervision of robotic systems using FIWARE and ROS 2 - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: Monitoring and Supervision of robotic systems using FIWARE and ROS 2</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
