--- a/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
+++ b/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: NGSI-LD and Smart Data Models - Standardizing Access to Digital Twins - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: NGSI-LD and Smart Data Models - Standardizing Access to Digital Twins</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
