--- a/directories/webinars/ngsi-ld-temporal-operations.html
+++ b/directories/webinars/ngsi-ld-temporal-operations.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: NGSI-LD Temporal Operations - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: NGSI-LD Temporal Operations</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
