--- a/directories/webinars/passing-the-fiware-experts-exam.html
+++ b/directories/webinars/passing-the-fiware-experts-exam.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Passing the FIWARE Experts Exam - Developers,iHubs (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Passing the FIWARE Experts Exam</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
