--- a/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
+++ b/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Robots and Machine Interfaces: Building Interfaces to ROS Systems - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: Robots and Machine Interfaces: Building Interfaces to ROS Systems</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
