--- a/directories/webinars/scalable-deployments-with-fiware.html
+++ b/directories/webinars/scalable-deployments-with-fiware.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Scalable deployments with FIWARE - Developers (Operations)</h1>
+	<h1 class="heading">FIWARE Webinars: Scalable deployments with FIWARE</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
