--- a/directories/webinars/securing-fiware-iot-devices.html
+++ b/directories/webinars/securing-fiware-iot-devices.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Securing FIWARE IoT Devices - Developers (Security)</h1>
+	<h1 class="heading">FIWARE Webinars: Securing FIWARE IoT Devices</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
