--- a/directories/webinars/short-term-history-within-fiware-systems.html
+++ b/directories/webinars/short-term-history-within-fiware-systems.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Short Term History within FIWARE Systems - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Short Term History within FIWARE Systems</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
