--- a/directories/webinars/smart-water-management---using-fiware-smart-data-models-for-water.html
+++ b/directories/webinars/smart-water-management---using-fiware-smart-data-models-for-water.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Smart Water Management - Using FIWARE Smart Data Models for Water - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Smart Water Management - Using FIWARE Smart Data Models for Water</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
