--- a/directories/webinars/strategies-for-context-data-persistence.html
+++ b/directories/webinars/strategies-for-context-data-persistence.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Strategies for Context Data Persistence - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Strategies for Context Data Persistence</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
