--- a/directories/webinars/the-use-of-dds-middleware-in-robotics.html
+++ b/directories/webinars/the-use-of-dds-middleware-in-robotics.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: The Use of DDS Middleware in Robotics - Developers (Robotics)</h1>
+	<h1 class="heading">FIWARE Webinars: The Use of DDS Middleware in Robotics</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
