--- a/directories/webinars/turning-organizations-into-smart-organizations.html
+++ b/directories/webinars/turning-organizations-into-smart-organizations.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Turning Organizations Into Smart Organizations - Developers (Cross-Chapter)</h1>
+	<h1 class="heading">FIWARE Webinars: Turning Organizations Into Smart Organizations</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
