--- a/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
+++ b/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Using NGSI-LD in a “System-of-Systems” Approach - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: Using NGSI-LD in a “System-of-Systems” Approach</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
