--- a/directories/webinars/what-is-an-iot-agent-.html
+++ b/directories/webinars/what-is-an-iot-agent-.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: What is an IoT Agent? - Developers (IoT Agents)</h1>
+	<h1 class="heading">FIWARE Webinars: What is an IoT Agent?</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
