--- a/directories/webinars/architecting-your-smart-solution-using-fiware.html
+++ b/directories/webinars/architecting-your-smart-solution-using-fiware.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2020-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
