--- a/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
+++ b/directories/webinars/choosing-open-source-licenses-for-fiware-components.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2020-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
