--- a/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
+++ b/directories/webinars/cities-as-enablers-of-the-data-economy---smart-data-models-for-cities.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2020-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
