--- a/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
+++ b/directories/webinars/fiware-data-spaces---a-practical-introduction-into-roles-and-components.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2024-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
