--- a/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
+++ b/directories/webinars/ngsi-ld-and-smart-data-models---standardizing-access-to-digital-twins.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2020-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
