--- a/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
+++ b/directories/webinars/robots-and-machine-interfaces--building-interfaces-to-ros-systems.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2020-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
