--- a/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
+++ b/directories/webinars/using-ngsi-ld-in-a--system-of-systems--approach.html
@@ -59,7 +59,8 @@
   "inLanguage": "en-US",
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
-  }
+  },
+  "uploadDate": "2024-01-01" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
