--- a/directories/webinars/language-maps-and-multilanguage-support-in-ngsi-ld.html
+++ b/directories/webinars/language-maps-and-multilanguage-support-in-ngsi-ld.html
@@ -75,13 +75,23 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Montserrat%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=4.9.6#038;subset=latin,latin-ext');
 
-.heading {
-    font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
-    font-weight: 600;
-    font-size: 36px;
+.chapter {
+    font-weight: 800;
+    font-size: 20px;
     color: #5DC0CF !important;
+    line-height: 24px;
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+.title {
+
+    font-weight: 300;
+    font-size: 48px;
+    color:#242424 !important;
     line-height: 1.3em;
     text-align: left;
+    margin-top: 0px;
 }
 
 p {
@@ -91,17 +101,18 @@ p {
 
 }
 body {
-  background-color: rgb(0, 36, 82);
-  color: #FFFFFF;
+  background-color: white;
+  color: #444444 !important;
   font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
-  margin-left: 100px;
-  margin-right: 100px;
+
 }
 
 .youtube-video-container {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  min-width: 640px;
+  max-width: 980px;
+  border: 2px solid;
 }
 
 .youtube-video-container::after {
@@ -118,22 +129,155 @@ body {
   height: 100%;
 }
 
+.menu-container {
+  background-color: rgb(0, 36, 82);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
 
+.menu-item {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+
+.header-content {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.main-content {
+  background-color:#e5f5f7!important
+}
+
+
+.title-page a {
+  font-size: 20px;
+  font-weight: 800;
+  text-align: right;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #5dc0cf !important;
+  cursor: pointer;
+}
+
+.video-section {
+ padding-top:80px;
+  padding-bottom:0px;
+  margin-left: 100px;
+  margin-right: 100px;
+  
+}
+
+.text-section {
+  padding-top:80px;
+  padding-bottom:80px;
+  margin-left: 100px;
+  margin-right: 100px;
+  min-width: 640px;
+  max-width: 980px;
+  
+}
+
+.description {
+  font-weight:600;
+  font-size:16px;
+  color:#002E67!important;
+  line-height:1.2em;
+  text-align:left
+}
+
+.title-page {
+  color: white;
+}
+
+footer {
+  color: white;
+  background-color: black;
+  padding: 10px;
+}
+footer p {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+
+@media screen and (min-device-width: 481px) and (max-device-width: 980px) {
+
+  footer p {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .video-section {
+   padding-top:40px;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-width: initial;
+    max-width: initial;
+    
+  }
+
+  .text-section {
+    padding-top:40px;
+    padding-bottom:40px;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-width: initial;
+    max-width: initial;
+    
+  }
+
+  .menu-item {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+
+}
 
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Language Maps and Multilanguage support in NGSI-LD</h1>
-  
-  <div class="youtube-video-container">
-    <iframe height="720" width="1280" 
-        src="https://www.youtube.com/embed/QZIrSa7un24"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
-    </iframe>
+  <div class="menu-container">
+    <div class="menu-item">
+      <a href="https://fiware.org">
+        <img decoding="async" class="item-logo" src="https://www.fiware.org/custom/brand-guide/img/logo/fiware/primary/svg/logo-fiware-white.svg" height="30" alt="FIWARE Logo"/>
+      </a>
+    </div>
+    <div class="menu-item title-page">
+      <a href="https://fiware.org/webinars">FIWARE Webinars</a>
+    </div>
+    <div class="menu-item">
+    </div>
   </div>
-  <p>
-   Language Maps and why you need them NGSI-LD LanguageProperty Multilingual Queries and ResponsesNGSI-LD Output formats Language Tags (BCP 47) Content Language Headers (RFC 3282)   Localization and InternationalizationDates and Currencies Collation and Sort Order Semantic Markup of Complex Objects  Smart Tourism is a growing sector of IT and an opportunity for economic growth.
-  </p>
-  <ul> <li>Language Maps and why you need them</li> <li>NGSI-LD <code>LanguageProperty</code></li> <li>Multilingual Queries and Responses<ul> <li>NGSI-LD Output formats</li> <li>Language Tags (BCP 47)</li> <li>Content Language Headers (RFC 3282)</li></ul></li> <li>Localization and Internationalization<ul> <li>Dates and Currencies</li> <li>Collation and Sort Order</li> <li>Semantic Markup of Complex Objects</li></ul></li> </ul> <p>Smart Tourism is a growing sector of IT and an opportunity for economic growth. However what can you do if the tourists you attract don't speak the local language? Also many regions are multilingual and therefore require support for their own infrastructure in a variety of local languages. NGSI-LD recognises underlying multi-language support is a need for many such context-driven systems and the current ETSI specification now offers language properties which define a standardized language support mechanism based on JSON-LD syntax.</p> <p>This webinar will discuss the latest specification changes and go into details as to what context brokers can and cannot do, and describe the use of best practices for localizing and internationalizing smart data models</p> 
+  <div class="header-content">
+    <div class="title-section">
+       <h5 class="chapter">Core Context</h5>
+	     <h1 class="title">Language Maps and Multilanguage support in NGSI-LD</h1>
+    </div>
+  </div>
+  <div class="main-content">
+    <div class="video-section">
+      <div class="youtube-video-container">
+        <iframe height="720" width="1280" 
+            src="https://www.youtube.com/embed/QZIrSa7un24"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
+        </iframe>
+      </div>
+    </div>
+    <div class="text-section">
+        <h4 class="description">Description</h4>
+        <ul> <li>Language Maps and why you need them</li> <li>NGSI-LD <code>LanguageProperty</code></li> <li>Multilingual Queries and Responses<ul> <li>NGSI-LD Output formats</li> <li>Language Tags (BCP 47)</li> <li>Content Language Headers (RFC 3282)</li></ul></li> <li>Localization and Internationalization<ul> <li>Dates and Currencies</li> <li>Collation and Sort Order</li> <li>Semantic Markup of Complex Objects</li></ul></li> </ul> <p>Smart Tourism is a growing sector of IT and an opportunity for economic growth. However what can you do if the tourists you attract don't speak the local language? Also many regions are multilingual and therefore require support for their own infrastructure in a variety of local languages. NGSI-LD recognises underlying multi-language support is a need for many such context-driven systems and the current ETSI specification now offers language properties which define a standardized language support mechanism based on JSON-LD syntax.</p> <p>This webinar will discuss the latest specification changes and go into details as to what context brokers can and cannot do, and describe the use of best practices for localizing and internationalizing smart data models</p>
+    </div>
+  </div>
+  <footer>
+    <p>
+    2024 &copy; FIWARE Foundation, e.V.
+    </p> 
+  </footer> 
 </body>
 </html>
