--- a/directories/webinars/local-expert-in-b2b-data-sharing.html
+++ b/directories/webinars/local-expert-in-b2b-data-sharing.html
@@ -75,13 +75,23 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Montserrat%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=4.9.6#038;subset=latin,latin-ext');
 
-.heading {
-    font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
-    font-weight: 600;
-    font-size: 36px;
+.chapter {
+    font-weight: 800;
+    font-size: 20px;
     color: #5DC0CF !important;
+    line-height: 24px;
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+.title {
+
+    font-weight: 300;
+    font-size: 48px;
+    color:#242424 !important;
     line-height: 1.3em;
     text-align: left;
+    margin-top: 0px;
 }
 
 p {
@@ -91,17 +101,18 @@ p {
 
 }
 body {
-  background-color: rgb(0, 36, 82);
-  color: #FFFFFF;
+  background-color: white;
+  color: #444444 !important;
   font-family: 'Montserrat', Helvetica, Arial, Lucida, sans-serif;
-  margin-left: 100px;
-  margin-right: 100px;
+
 }
 
 .youtube-video-container {
   position: relative;
   overflow: hidden;
-  width: 100%;
+  min-width: 640px;
+  max-width: 980px;
+  border: 2px solid;
 }
 
 .youtube-video-container::after {
@@ -118,22 +129,155 @@ body {
   height: 100%;
 }
 
+.menu-container {
+  background-color: rgb(0, 36, 82);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
 
+.menu-item {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+
+.header-content {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.main-content {
+  background-color:#e5f5f7!important
+}
+
+
+.title-page a {
+  font-size: 20px;
+  font-weight: 800;
+  text-align: right;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #5dc0cf !important;
+  cursor: pointer;
+}
+
+.video-section {
+ padding-top:80px;
+  padding-bottom:0px;
+  margin-left: 100px;
+  margin-right: 100px;
+  
+}
+
+.text-section {
+  padding-top:80px;
+  padding-bottom:80px;
+  margin-left: 100px;
+  margin-right: 100px;
+  min-width: 640px;
+  max-width: 980px;
+  
+}
+
+.description {
+  font-weight:600;
+  font-size:16px;
+  color:#002E67!important;
+  line-height:1.2em;
+  text-align:left
+}
+
+.title-page {
+  color: white;
+}
+
+footer {
+  color: white;
+  background-color: black;
+  padding: 10px;
+}
+footer p {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+
+@media screen and (min-device-width: 481px) and (max-device-width: 980px) {
+
+  footer p {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .video-section {
+   padding-top:40px;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-width: initial;
+    max-width: initial;
+    
+  }
+
+  .text-section {
+    padding-top:40px;
+    padding-bottom:40px;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-width: initial;
+    max-width: initial;
+    
+  }
+
+  .menu-item {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+
+}
 
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: Local Expert in B2B Data Sharing</h1>
-  
-  <div class="youtube-video-container">
-    <iframe height="720" width="1280" 
-        src="https://www.youtube.com/embed/J38N832HRjM"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
-    </iframe>
+  <div class="menu-container">
+    <div class="menu-item">
+      <a href="https://fiware.org">
+        <img decoding="async" class="item-logo" src="https://www.fiware.org/custom/brand-guide/img/logo/fiware/primary/svg/logo-fiware-white.svg" height="30" alt="FIWARE Logo"/>
+      </a>
+    </div>
+    <div class="menu-item title-page">
+      <a href="https://fiware.org/webinars">FIWARE Webinars</a>
+    </div>
+    <div class="menu-item">
+    </div>
   </div>
-  <p>
-   Effective B2B Data Sharing relies on the agreement to use common frameworks and protocols.
-  </p>
-  <p>Effective B2B Data Sharing relies on the agreement to use common frameworks and protocols. No new frameworks and protocols should need to be built when existing technologies such as FIWARE are readily available and in common use. The fundamental technologies underpinning the process of data sharing are the use of a common trustworthy security framework -identifying participants and roles- and a common structured definition of payloads and protocols to be used when transferring data between trusted parties. A Local Expert in B2B Data Sharing should be able to explain the need for such frameworks and deeply understand how they operate and how the network of trust and interoperability.  is created.</p> <p>The webinar explains the role and background required for an LEBDS and provides a walkthrough of the certification  process and explains how it is run and how to study to take the exam.</p> 
+  <div class="header-content">
+    <div class="title-section">
+       <h5 class="chapter">Security</h5>
+	     <h1 class="title">Local Expert in B2B Data Sharing</h1>
+    </div>
+  </div>
+  <div class="main-content">
+    <div class="video-section">
+      <div class="youtube-video-container">
+        <iframe height="720" width="1280" 
+            src="https://www.youtube.com/embed/J38N832HRjM"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
+        </iframe>
+      </div>
+    </div>
+    <div class="text-section">
+        <h4 class="description">Description</h4>
+        <p>Effective B2B Data Sharing relies on the agreement to use common frameworks and protocols. No new frameworks and protocols should need to be built when existing technologies such as FIWARE are readily available and in common use. The fundamental technologies underpinning the process of data sharing are the use of a common trustworthy security framework -identifying participants and roles- and a common structured definition of payloads and protocols to be used when transferring data between trusted parties. A Local Expert in B2B Data Sharing should be able to explain the need for such frameworks and deeply understand how they operate and how the network of trust and interoperability.  is created.</p> <p>The webinar explains the role and background required for an LEBDS and provides a walkthrough of the certification  process and explains how it is run and how to study to take the exam.</p>
+    </div>
+  </div>
+  <footer>
+    <p>
+    2024 &copy; FIWARE Foundation, e.V.
+    </p> 
+  </footer> 
 </body>
 </html>
